--- a/index.html
+++ b/index.html
@@ -6,13 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Trungquandev - RTC</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="peer.js"></script>
+
+    <script src="http://cdn.peerjs.com/0.3/peer.min.js"></script>
     <script src="main.js"></script>
 </head>
 <body>
+    <h3 id="my-peer">My peerID: </h3>
     <video id="localStream" width="300" controls></video>
     <br><br>
     <video id="remoteStream" width="300" controls></video>
     <br><br>
+    <input type="text" name="" id="remote-id">
+    <button id="btlCall">Call</button>
 </body>
 </html>
