--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
     <video id="remoteStream" width="300" controls></video>
     <br><br>
     <input type="text" name="" id="remote-id">
-    <button id="btlCall">Call</button>
+    <button id="btnCall">Call</button>
 </body>
 </html>
