--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <br><br>
     <video id="remoteStream" width="300" controls></video>
     <br><br>
-    <input type="text" name="" id="remote-id">
-    <button id="btnCall">Call</button>
+    <input type="text" id="remote-id">
+    <button type="button" id="btnCall">Call</button>
 </body>
 </html>
